Storage processing update

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -200,5 +200,27 @@
     "decimal": ".",
     "thousands": ",",
     "percent": "%"
+  },
+  "cookies": {
+    "title": "Cookie Settings",
+    "description": "We use cookies to enhance your experience, analyze site traffic, and personalize content. By continuing to use our site, you consent to our use of cookies.",
+    "acceptAll": "Accept All",
+    "acceptNecessary": "Accept Necessary",
+    "rejectAll": "Reject All",
+    "showDetails": "Show Details",
+    "hideDetails": "Hide Details",
+    "privacyPolicy": "Privacy Policy",
+    "necessary": {
+      "title": "Necessary Cookies",
+      "description": "These cookies are essential for the website to function properly. They cannot be disabled."
+    },
+    "analytics": {
+      "title": "Analytics Cookies",
+      "description": "These cookies help us understand how visitors interact with our website by collecting and reporting information anonymously."
+    },
+    "marketing": {
+      "title": "Marketing Cookies",
+      "description": "These cookies are used to track visitors across websites to display relevant advertisements."
+    }
   }
 } 
