--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -200,5 +200,27 @@
     "decimal": ",",
     "thousands": " ",
     "percent": "%"
+  },
+  "cookies": {
+    "title": "Налаштування Cookies",
+    "description": "Ми використовуємо cookies для покращення вашого досвіду, аналізу трафіку сайту та персоналізації контенту. Продовжуючи використовувати наш сайт, ви погоджуєтесь з використанням cookies.",
+    "acceptAll": "Прийняти Всі",
+    "acceptNecessary": "Прийняти Необхідні",
+    "rejectAll": "Відхилити Всі",
+    "showDetails": "Показати Деталі",
+    "hideDetails": "Сховати Деталі",
+    "privacyPolicy": "Політика Конфіденційності",
+    "necessary": {
+      "title": "Необхідні Cookies",
+      "description": "Ці cookies необхідні для правильної роботи веб-сайту. Їх неможливо вимкнути."
+    },
+    "analytics": {
+      "title": "Аналітичні Cookies",
+      "description": "Ці cookies допомагають нам зрозуміти, як відвідувачі взаємодіють з нашим веб-сайтом, збираючи та повідомляючи інформацію анонімно."
+    },
+    "marketing": {
+      "title": "Маркетингові Cookies",
+      "description": "Ці cookies використовуються для відстеження відвідувачів на різних веб-сайтах для показу релевантної реклами."
+    }
   }
 } 
