--- a/src/locales/uk.json
+++ b/src/locales/uk.json
@@ -201,6 +201,14 @@
     "thousands": " ",
     "percent": "%"
   },
+  "pdf": {
+    "export": "Експорт в PDF",
+    "exportBanks": "Експорт Порівняння Банків",
+    "exportCalculation": "Експорт Розрахунку",
+    "downloadSuccess": "PDF успішно завантажено",
+    "downloadError": "Помилка завантаження PDF",
+    "noDataToExport": "Немає даних для експорту"
+  },
   "cookies": {
     "title": "Налаштування Cookies",
     "description": "Ми використовуємо cookies для покращення вашого досвіду, аналізу трафіку сайту та персоналізації контенту. Продовжуючи використовувати наш сайт, ви погоджуєтесь з використанням cookies.",
