--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -201,6 +201,14 @@
     "thousands": ",",
     "percent": "%"
   },
+  "pdf": {
+    "export": "Export to PDF",
+    "exportBanks": "Export Banks Comparison",
+    "exportCalculation": "Export Calculation",
+    "downloadSuccess": "PDF downloaded successfully",
+    "downloadError": "Error downloading PDF",
+    "noDataToExport": "No data to export"
+  },
   "cookies": {
     "title": "Cookie Settings",
     "description": "We use cookies to enhance your experience, analyze site traffic, and personalize content. By continuing to use our site, you consent to our use of cookies.",
